--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,19 +14,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
 
-      - name: Install eleventy
-        run: npm install -g @11ty/eleventy
+      - name: Install Nene
+        run: python -m pip install nene==0.1.1
 
       - name: Build the website
         run: make
 
       - name: Add extra files for GitHub pages
         run: |
-          touch _site/.nojekyll
-          echo "www.acarolcolombo.com" > _site/CNAME
+          touch _build/.nojekyll
+          echo "www.acarolcolombo.com" > _build/CNAME
 
       - name: Push to acarolcolombo.github.io
         if: success() && github.event_name == 'push'
@@ -36,7 +38,7 @@ jobs:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           external_repository: acarolcolombo/acarolcolombo.github.io
           publish_branch: master
-          publish_dir: ./_site
+          publish_dir: ./_build
           # Only keep the latest commit to avoid bloating the repository
           force_orphan: true
           user_name: 'github-actions[bot]'
