Changed banners and titles

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: acarolcolombo.com
+name: acarolcolombo
 channels:
   - conda-forge
   - defaults
@@ -6,4 +6,4 @@ dependencies:
   - python==3.9
   - pip
   - pip:
-    - nene==0.1.1
+    - nene==0.3.*
