Add the infrastructure for a "Science" page
Includes a list of publications defined in the `papers.yml` file. The
`science.md` page includes a template that generates the list of
publications from the data in this file.

--- a/config.yml
+++ b/config.yml
@@ -18,6 +18,8 @@ navigation:
       id: index
     - name: About
       id: about
+    - name: Science
+      id: science
     - name: Contact
       id: contact
     - name: Topics
