added scientific publications

--- a/papers.yml
+++ b/papers.yml
@@ -100,3 +100,193 @@ papers:
       the nigrostriatal system mediating the haloperidol-induced cataleptic
       state.
       </p>
+
+- doi: 10.1016/j.bbamcr.2017.12.007 
+    openaccess: true
+    title: |
+      The putative flippase Apt1 is required for intracellular 
+      membrane architecture and biosynthesis of polysaccharide and lipids 
+      in Cryptococcus neoformans
+    year: 2018
+    authors: |
+      Rizzo, J., Colombo, A.C., Zamith-Miranda, D., Silva, V.K.A., Allegood, J.C., 
+      Casadevall, A., Del Poeta, M., Nosanchuk, J.D., Kronstad, J.W., Rodrigues, 
+      M.L.
+    journal: Biochimica et Biophysica Acta (BBA) - 
+      Molecular Cell Research
+    citation: |
+      Rizzo, J., Colombo, A.C., Zamith-Miranda, D., Silva, V.K.A., Allegood, J.C., 
+      Casadevall, A., Del Poeta, M., Nosanchuk, J.D., Kronstad, J.W., Rodrigues, 
+      M.L., 2018. The putative flippase Apt1 is required for intracellular 
+      membrane architecture and biosynthesis of polysaccharide and lipids 
+      in Cryptococcus neoformans. Biochimica et Biophysica Acta (BBA) - 
+      Molecular Cell Research. https://doi.org/10.1016/j.bbamcr.2017.12.007 
+    abstract: |
+      <p>
+      Flippases are responsible for the asymmetric distribution of phospholipids
+      in biological membranes. In the encapsulated fungal pathogen Cryptococcus
+      neoformans, the putative flippase Apt1 is an important regulator of 
+      polysaccharide secretion and pathogenesis in mice by unknown mechanisms.
+      In this study, we analyzed the role of C. neoformans Apt1 in intracellular
+      membrane architecture and synthesis of polysaccharide and lipids. 
+      Analysis of wild type (WT), apt1Δ (mutant) and apt1Δ::APT1 (complemented)
+      strains by transmission electron microscopy revealed that deletion of 
+      APT1 resulted in the formation of irregular vacuoles. Disorganization 
+      of vacuolar membranes in apt1Δ cells was accompanied by a significant 
+      increase in the amounts of intra-vacuolar and pigment-containing vesicles.
+      Quantitative immunogold labeling of C. neoformans cells with a monoclonal
+      antibody raised to a major capsular component suggested impaired 
+      polysaccharide synthesis. APT1 deletion also affected synthesis of 
+      phosphatidylserine, phosphatidylethanolamine, inositolphosphoryl ceramide, 
+      glucosylceramide and ergosterylglycoside. These results reveal novel functions
+      of Apt1 and are in agreement with the notion that this putative flippase plays 
+      an important role in the physiology of C. neoformans.
+      </p>
+
+- doi: 10.1016/j.febslet.2015.02.036  
+    openaccess: true
+    title: |
+      Dual role of dopamine D2 -like receptors in the
+      mediation of conditioned and unconditioned fear
+    year: 2015
+    authors: |
+     Brandão, M.L., de Oliveira, A.R., Muthuraju, S., Colombo, A.C., Saito, 
+      V.M., Talbot, T.
+    journal: FEBS Letters
+    citation: |
+      Brandão, M.L., de Oliveira, A.R., Muthuraju, S., Colombo, A.C., Saito, 
+      V.M., Talbot, T., 2015. Dual role of dopamine D2 -like receptors in the
+      mediation of conditioned and unconditioned fear. FEBS Letters. 
+      https://doi.org/10.1016/j.febslet.2015.02.036  
+    abstract: |
+      <p>
+      A reduction of dopamine release or D2 receptor blockade in the terminal
+      fields of the mesolimbic system, particularly the amygdala, clearly reduces
+      conditioned fear. Similar D2 receptor antagonism in the neural substrates 
+      of fear in the midbrain tectum attenuates the processing of unconditioned
+      aversive information. However, the implications of the interplay between 
+      opposing actions of dopamine in the rostral and caudal segments of the 
+      dopaminergic system are still unclear. Previous studies from this laboratory
+      have reported the effects of dopaminergic drugs on behavior in rats in the
+      elevated plus maze, auditory-evoked potentials (AEPs) recorded from the
+      midbrain tectum, fear-potentiated startle, and conditioned freezing. These
+      findings led to an interesting framework on the functional roles of dopamine
+      in both anxiety and fear states. Dopamine D2 receptor inhibition in the 
+      terminal fields of the mesolimbic dopamine system generally causes 
+      anxiolytic-like effects, whereas the activity of midbrain substrates of 
+      unconditioned fear are enhanced by D2 receptor antagonists, suggesting 
+      that D2 receptor-mediated mechanisms play opposing roles in fear/anxiety
+      processes, depending on the brain region under study. Dopamine appears to
+      mediate conditioned fear by acting at rostral levels of the brain and regulate
+      unconditioned fear at the midbrain level, likely by reducing the sensorimotor
+      gating of aversive events.
+      </p>
+
+- doi: 10.1590/0001-3765201520140704  
+    openaccess: true
+    title: |
+     Fungal colonization of the brain: anatomopathological aspects of 
+     neurological cryptococcosis
+    year: 2015
+    authors: |
+     COLOMBO, A.C., RODRIGUES, M.L.
+    journal: Anais da Academia Brasileira de Ciências
+    citation: |
+    COLOMBO, A.C., RODRIGUES, M.L., 2015. Fungal colonization of the 
+    brain: anatomopathological aspects of neurological cryptococcosis. 
+    An. Acad. Bras. Ciênc. https://doi.org/10.1590/0001-3765201520140704
+  abstract: |
+      <p>
+      Brain infection by the fungus Cryptococcus neoformans results in an 
+      estimated 500,000 human deaths per annum. Colonization of the central 
+      nervous system (CNS) by C. neoformans causes different clinical syndromes 
+      that involve interaction of a number of fungal components with distinct 
+      brain cells. In this manuscript, our literature review confirmed the 
+      notion that the Cryptococcus field is expanding rapidly, but also 
+      suggested that studies on neuropathogenesis still represent a small 
+      fraction of basic research activity in the field. We therefore discussed 
+      anatomical and physiological aspects of the brain during infection by C. 
+      neoformans, in addition to mechanisms by which brain resident cells interact 
+      with the fungus. This review suggests that multiple efforts are necessary 
+      to improve the knowledge on how C. neoformans affects brain cells, in order 
+      to enable the generation of new therapeutic tools in a near future.
+      </p>
+
+- doi: 10.1371/journal.pone.0104228 
+    openaccess: true
+    title: |
+     Dopamine D2-Like Receptors Modulate Unconditioned Fear: 
+    Role of the Inferior Colliculus
+    year: 2014
+    authors: |
+     de Oliveira, A.R., Colombo, A.C., Muthuraju, S., Almada, R.C., Brandão, 
+    M.L.
+    journal: PLoS ONE
+    citation: |
+    de Oliveira, A.R., Colombo, A.C., Muthuraju, S., Almada, R.C., Brandão, 
+    M.L., 2014. Dopamine D2-Like Receptors Modulate Unconditioned Fear: 
+    Role of the Inferior Colliculus. PLoS ONE. https://doi.org/10.1371/journal.pone.0104228 
+  abstract: |
+      <p>
+      Background
+      A reduction of dopamine release or D2 receptor blockade in the terminal 
+      fields of the mesolimbic system clearly reduces conditioned fear. Injections of 
+      haloperidol, a preferential D2 receptor antagonist, into the inferior colliculus 
+      (IC) enhance the processing of unconditioned aversive information. However, a 
+      clear characterization of the interplay of D2 receptors in the mediation of 
+      unconditioned and conditioned fear is still lacking.
+      Methods
+      The present study investigated the effects of intra-IC injections of the 
+      D2 receptor-selective antagonist sulpiride on behavior in the elevated plus maze 
+      (EPM), auditory-evoked potentials (AEPs) to loud sounds recorded from the IC, 
+      fear-potentiated startle (FPS), and conditioned freezing.
+      Results
+      Intra-IC injections of sulpiride caused clear proaversive effects in the EPM 
+      and enhanced AEPs induced by loud auditory stimuli. Intra-IC sulpiride 
+      administration did not affect FPS or conditioned freezing.
+      Conclusions
+      Dopamine D2-like receptors of the inferior colliculus play a role in the 
+      modulation of unconditioned aversive information but not in the fear-potentiated 
+      startle response.
+      </p>
+
+- doi: 10.1371/journal.pone.0104228 
+    openaccess: false
+    title: |
+     Dopaminergic mechanisms underlying catalepsy, fear and anxiety: Do they interact?
+    year: 2013
+    authors: |
+     Colombo, A.C., de Oliveira, A.R., Reimer, A.E., Brandão, M.L.
+    journal: Behavioural Brain Research
+    citation: |
+    Colombo, A.C., de Oliveira, A.R., Reimer, A.E., Brandão, M.L., 2013. Dopaminergic 
+    mechanisms underlying catalepsy, fear and anxiety: Do they interact? Behavioural 
+    Brain Research. https://doi.org/10.1016/j.bbr.2013.10.002  
+  abstract: |
+      <p>
+      Haloperidol is a dopamine D2 receptor antagonist that induces catalepsy when 
+      systemically administered to rodents. The haloperidol-induced catalepsy is a 
+      state of akinesia and rigidity very similar to that seen in Parkinson's disease. 
+      There exists great interest in knowing whether or not some degree of emotionality 
+      underlies catalepsy. If so, what kind of emotional distress would permeate such 
+      motor disturbance? This study is an attempt to shed some light on this issue 
+      through an analysis of ultrasound vocalizations (USVs) of 22 kHz, open-field 
+      test, and contextual conditioned fear in rats with some degree of catalepsy 
+      induced by haloperidol. Systemic administration of haloperidol caused catalepsy 
+      and decreased exploratory activity in the open-field. There was no difference 
+      in the emission of USVs between groups during the catalepsy or the exploratory 
+      behavior in the open-field test. In the contextual conditioned fear, when 
+      administered before training session, haloperidol did not change the emission 
+      of USVs or the freezing response. When administered before testing session, 
+      haloperidol enhanced the freezing response and decreased the emission of USVs 
+      on the test day. These findings suggest that the involvement of dopaminergic 
+      mechanisms in threatening situations depends on the nature of the aversive 
+      stimulus. Activation of D2 receptors occurs in the setting up of adaptive 
+      responses to conditioned fear stimuli so that these mechanisms seem to be 
+      important for the emission of 22 kHz USVs during the testing phase of the 
+      contextual conditioned fear, but not during the training session or the 
+      open-field test (unconditioned fear stimuli). Catalepsy, on the other hand, 
+      is the result of the blockage of D2 receptors in neural circuits associated 
+      to motor behavior that appears to be dissociated from those directly linked 
+      to dopamine-mediated neural mechanisms associated to fear.
+      </p>
