Add a News section to the english site
Markdown files placed in there will be rendered as news items.

--- a/config.yml
+++ b/config.yml
@@ -16,6 +16,8 @@ navigation:
   en:
     - name: Home
       id: index
+    - name: News
+      id: news/index  
     - name: Stories
       id: stories/index
     - name: Science
