--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,34 +12,54 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Install Nene
-        run: python -m pip install nene==0.5.*
+        run: python -m pip install -r requirements.txt
 
       - name: Build the website
-        run: make
+        run: nene
 
-      - name: Add extra files for GitHub pages
-        run: |
-          touch _build/.nojekyll
-          echo "www.acarolcolombo.com" > _build/CNAME
+      - name: Clone the acarolcolombo.github.io repository
+        uses: actions/checkout@v4
+        with:
+          repository: acarolcolombo/acarolcolombo.github.io
+          ref: 'master'
+          ssh-key:  ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          # Checkout to this folder instead of the current one
+          path: deploy
+          # Download the entire history
+          fetch-depth: 0
 
       - name: Push to acarolcolombo.github.io
         if: success() && github.event_name == 'push'
-        # Don't use tags: https://julienrenaux.fr/2019/12/20/github-actions-security-risk/
-        uses: peaceiris/actions-gh-pages@bbdfb200618d235585ad98e965f4aafc39b4c501
-        with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          external_repository: acarolcolombo/acarolcolombo.github.io
-          publish_branch: master
-          publish_dir: ./_build
-          # Only keep the latest commit to avoid bloating the repository
-          force_orphan: true
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+        run: |
+          # Make the new commit message. Needs to happen before cd into deploy
+          # to get the right commit hash.
+          message="Deploy from ${GITHUB_REPOSITORY}@$(git rev-parse --short HEAD)"
+          cd deploy
+          # Delete all the files and replace with our new set
+          echo -e "\nRemoving old files from previous builds:"
+          rm -rvf *
+          echo -e "\nCopying HTML files:"
+          cp -Rvf ../_build/* .
+          # Stage the commit
+          git add -A .
+          echo -e "\nChanges to be applied:"
+          git status
+          # Configure git to be the GitHub Actions account
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          # Amend the previous commit to avoid having a long history
+          echo -e "\nAmending last commit:"
+          git commit --amend --reset-author -m "$message"
+          # Make the push quiet just in case there is anything that could leak
+          # sensitive information.
+          echo -e "\nPushing changes:"
+          git push -fq origin master 2>&1 >/dev/null
+          echo -e "\nFinished uploading generated files."
