--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python==3.10
+  - python==3.12
   - pip
-  - nene==0.5.*
+  - pip:
+    - -r requirements.txt
